chlcd3vb3/lma/prometheus-operator/Service_prometheus-operator-operator.yaml
# Source: kube-prometheus-stack/templates/prometheus-operator/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: prometheus-operator-operator
  namespace: lma
  labels:
    app: kube-prometheus-stack-operator
    
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/instance: prometheus-operator
    app.kubernetes.io/version: "21.0.3"
    app.kubernetes.io/part-of: kube-prometheus-stack
    chart: kube-prometheus-stack-21.0.3
    release: "prometheus-operator"
    heritage: "Helm"
spec:
  ports:
  - name: https
    port: 443
    targetPort: https
  selector:
    app: kube-prometheus-stack-operator
    release: "prometheus-operator"
  type: "ClusterIP"
